Jumbotron: styling background-color

--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -2,7 +2,9 @@
 
 $brand_primary: #282935;
 $brand_secondary: #2fad96;
+
 $bg_primary: #eceeef;
+$hero_bg: #ecf2f9;
 
 $text_primary: #212121;
 $text_primary_rgba: rgba(33,33,33,.4);
