--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -3,7 +3,7 @@
 $brand_primary: #343142;
 $brand_secondary: #2fad96;
 
-$bg_primary: #eceeef;
+$bg_secondary: #fefefe;
 $hero_bg: #ecf2f9;
 
 $text_primary: #212121;
