--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -11,6 +11,9 @@ $text_primary_rgba: rgba(33,33,33,.4);
 $text_secondary: #fff;
 $text_secondary_rgba: rgba(255,255,255,.4);
 
+$border_color: #eceeef;
+$box_shadow: 0px 6px 18px rgba(33, 33, 33, 0.1);
+
 
 
 // Font size
