--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -5,6 +5,7 @@ $brand_secondary: #2fad96;
 
 $bg_secondary: #fefefe;
 $hero_bg: #ecf2f9;
+$yt_bg: #343142;
 
 $text_primary: #212121;
 $text_primary_rgba: rgba(33,33,33,.4);
